# demo-actix-web

./: .dockerignore  .gitignore  Cargo.toml  Docker-compose.yml  Dockerfile  Makefile  README.md  azure-pipelines.yml  sonar-project.properties
src/: main.rs
src/api/: services.rs
src/models/: entry_model.rs  mod.rs
src/todo/: mod.rs  todo_main.rs
src/utils/: generateToken.rs  login.rs
