[package]
name = "demo-actix-web"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.6.4"
actix-web = "4.3.1"
chrono = "0.4.24"
dotenv = "0.15.0"
env_logger = "0.10.0"
jsonwebtoken = "8.3.0"
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
slog = "2.7.0"
